<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KayitActivity"
    android:background="@color/arkaplan">
    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/Kayıt"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtTxtTc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/ic_baseline_account_box_24"
        android:ems="15"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Id"
        android:inputType="number"
        android:maxLength="11"
        android:textColor="@color/grey"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:theme="@style/CustomEditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

    <EditText
        android:id="@+id/edttextname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_account_box_24"
        android:ems="15"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/name"
        android:inputType="text"
        android:textColor="@color/grey"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:theme="@style/CustomEditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtTc" />

    <EditText
        android:id="@+id/edttextsurname"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_account_box_24"
        android:ems="15"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/surname"
        android:inputType="text"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:theme="@style/CustomEditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttextname" />

    <EditText
        android:id="@+id/edttxtdate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:drawableLeft="@drawable/ic_baseline_date_range_24"
        android:ems="15"
        android:fontFamily="sans-serif-medium"
        android:backgroundTint="@color/white"
        android:hint="@string/date"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/grey"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:theme="@style/CustomEditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttextsurname" />

    <TextView
        android:id="@+id/txtbilgi"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext"
        android:fontFamily="sans-serif-medium"
        android:text="@string/bilgi"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttxtdate" />

    <Button
        android:id="@+id/btnfurther"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/Further"
        android:background="@drawable/txtviwe"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbilgi" />
</androidx.constraintlayout.widget.ConstraintLayout>